Fixed top navigation unreachable on mobile devices.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,8 +6,15 @@
   text-indent: -9999px
 }
 
-.top-bar-section > ul > li > a {
-  font-size: 0.9rem;
+.top-bar-section {
+  @media #{$small-only} {
+    a {
+      color: #FFF !important;
+    }
+  }
+  & > ul > li > a {
+    font-size: 0.9rem;
+  }
 }
 
 .alternate {
